--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -29,7 +29,7 @@ server.tomcat.threads.max = 1
 ###############################################
 
 
-
+server.address=localhost
 ###############################################
 ### EMBEDDED TOMCAT CONFIGURATIONS ###
 ###############################################
